--- a/template/index.html
+++ b/template/index.html
@@ -46,15 +46,13 @@
     <link href="fonts/fontello/css/fontello.css" rel="stylesheet">
 
     <!-- Plugins -->
-    <link href="plugins/magnific-popup/magnific-popup.css" rel="stylesheet">
     <link href="plugins/rs-plugin-5/css/settings.css" rel="stylesheet">
     <link href="plugins/rs-plugin-5/css/layers.css" rel="stylesheet">
     <link href="plugins/rs-plugin-5/css/navigation.css" rel="stylesheet">
     <link href="css/animations.css" rel="stylesheet">
     <link href="plugins/owlcarousel2/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="plugins/owlcarousel2/assets/owl.theme.default.min.css" rel="stylesheet">
-    <link href="plugins/hover/hover-min.css" rel="stylesheet">		
-    <link href="plugins/morphext/morphext.css" rel="stylesheet">
+    <link href="plugins/hover/hover-min.css" rel="stylesheet">
 
     <link href="css/style.css" rel="stylesheet" >
 
@@ -84,17 +82,17 @@
                 <!-- header-top-first start -->
                 <div class="header-top-first clearfix">
                   <ul class="social-links circle small clearfix hidden-sm-down">
-                    <li class="linkedin"><a target="_blank" href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
-                    <li class="youtube"><a target="_blank" href="http://www.youtube.com"><i class="fa fa-youtube-play"></i></a></li>
-                    <li class="facebook"><a target="_blank" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
+                    <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
+                    <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
+                    <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li>
                   </ul>
                   <div class="social-links hidden-md-up circle small">
                     <div class="btn-group dropdown">
                       <button id="header-top-drop-1" type="button" class="btn dropdown-toggle--no-caret" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fa fa-share-alt"></i></button>
                       <ul class="dropdown-menu dropdown-animation" aria-labelledby="header-top-drop-1">
-                        <li class="linkedin"><a target="_blank" href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
-                        <li class="youtube"><a target="_blank" href="http://www.youtube.com"><i class="fa fa-youtube-play"></i></a></li>
-                        <li class="facebook"><a target="_blank" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
+                        <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
+                        <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
+                        <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li>
                       </ul>
                     </div>
                   </div>
@@ -202,6 +200,8 @@
       </div>
       <!-- header-container end -->
       <!-- end copy header -->
+
+<!-- start page -->
       
       <!-- banner start -->
       <div class="banner clearfix">
@@ -422,7 +422,7 @@
                     <h4 class="card-title mt-10">Visão Computacional</h4>
                     <div class="separator clearfix"></div>
                     <p>Utilizamos processamento de imagens<br> para automatizar inspeções visuais e<br> aumentar a sua acurácia.</p>
-                    <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-technology-1.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+                    <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-visao-computacional.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
                   </div>
                 </div>
                 <div class="col-md-4 ">
@@ -431,7 +431,7 @@
                     <h4 class="card-title mt-10">Inteligência Artificial</h4>
                     <div class="separator clearfix"></div>
                     <p>O aprendizado de máquina e o uso<br> de redes neurais nos auxiliam no<br> reconhecimento de padrões.</p>
-                    <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-technology-2.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+                    <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-inteligencia-artificial.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
                   </div>
                 </div>
                 <div class="col-md-4 ">
@@ -440,7 +440,7 @@
                     <h4 class="card-title mt-10">Câmeras Hiperespectrais</h4>    
                     <div class="separator clearfix"></div>
                     <p>Utilizamos câmeras hiperespectrais para<br> analisar características que não podem<br> ser vistas com câmeras tradicionais.</p>
-                    <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-technology-3.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+                    <a class="btn btn-transparent btn-animated btn-bordered-green" href="page-tech-cameras-hiperespectrais.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
                   </div>
                 </div>
               </div>
@@ -488,7 +488,7 @@
                       <h3 class="card-title text-white">Uva</h3>
                       <div class="separator"></div>
                       <p>Sistema automático de<br> qualificação de uvas</p>
-                      <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-sistema-qualificacao-uva.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
+                      <a class="btn btn-transparent btn-animated btn-bordered-white" href="page-case-sistema-qualificacao-uvas.html">Saiba mais<i class="fa fa-angle-double-right"></i></a>
                     </div>
                   </div>
                 </div>
@@ -843,59 +843,63 @@
 
       <!-- footer start -->
       <footer id="footer" class="clearfix dark">
-        <div class="footer">
-          <div class="container">
-            <div class="footer-inner">
-              <div class="row justify-content-lg-center">
-                <div class="col-lg-9">
-                  <div class="footer-content text-center padding-ver-clear">
-                    <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
-                    <p>Máquinas de Visão e Inteligência Artificial</p>
-                    <ul class="list-inline mb-20">
-                      <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
-                      <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
-                      <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
-                      <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
-                    </ul>
-                    <ul class="social-links circle animated-effect-1 margin-clear">
-                      <li class="linkedin"><a target="_blank" href="http://www.linkedin.com"><i class="fa fa-linkedin"></i></a></li>
-                      <li class="youtube"><a target="_blank" href="http://www.youtube.com"><i class="fa fa-youtube-play"></i></a></li>
-                      <li class="facebook"><a target="_blank" href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li> 
-                    </ul>
-                    <div class="separator"></div>
-                    <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
+          <div class="footer">
+            <div class="container">
+              <div class="footer-inner">
+                <div class="row justify-content-lg-center">
+                  <div class="col-lg-9">
+                    <div class="footer-content text-center padding-ver-clear">
+                      <div class="logo-footer"><img id="logo-footer" class="mx-auto" src="images/mvisia-white-logo.svg" alt=""></div>
+                      <p>Máquinas de Visão e Inteligência Artificial</p>
+                      <ul class="list-inline mb-20">
+                        <li class="list-inline-item"><i class="text-default fa fa-map-marker pr-1"></i>Av. Queiroz Filho, 1700 - Torre E, Sala 512</li>
+                        <li class="list-inline-item"><i class="text-default fa fa-phone pl-10 pr-1"></i>(+55) (11) 4302-5902</li>
+                        <li class="list-inline-item"><i class="text-default fa fa-envelope-o pl-10 pr-1"></i>contato@mvisia.com.br</li>
+                        <li class="list-inline-item"><i class="text-default fa fa-whatsapp pl-10 pr-1"></i>(+55) (11) 98134-9727</li>
+                      </ul>
+                      <ul class="social-links circle animated-effect-1 margin-clear">
+                        <li class="linkedin"><a target="_blank" href="https://www.linkedin.com/company/mvisia/"><i class="fa fa-linkedin"></i></a></li>
+                        <li class="youtube"><a target="_blank" href="https://www.youtube.com/user/MVisiaBrasil"><i class="fa fa-youtube-play"></i></a></li>
+                        <li class="facebook"><a target="_blank" href="https://www.facebook.com/MVisia/"><i class="fa fa-facebook"></i></a></li> 
+                      </ul>
+                      <div class="separator"></div>
+                      <p class="text-center margin-clear">©2018 MVisia. Todos os direitos reservados.</p>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-      </footer>
-      <!-- footer end -->
-    </div>
-    <!-- page-wrapper end -->
-
-    <!-- jquery and bootstap core js files -->
-    <script type="text/javascript" src="plugins/jquery.min.js"></script>
-    <script type="text/javascript" src="plugins/popper.min.js"></script>
-    <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
-    <!-- Modernizr javascript -->
-    <script type="text/javascript" src="plugins/modernizr.js"></script>
-    <!-- jQuery Revolution Slider  -->
-    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
-    <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
-    <!-- Appear javascript -->
-    <script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
-    <script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
-    <!-- Owl carousel javascript -->
-    <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
-    <!-- Pace javascript -->
-    <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
-    <!-- Initialization of Plugins -->
-    <script type="text/javascript" src="js/template.js"></script>
-    <!-- Google Maps javascript -->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
-    <script type="text/javascript" src="js/google.map.config.js"></script>
-
-  </body>
-</html>
+        </footer>
+        <!-- footer end -->
+      </div>
+      <!-- page-wrapper end -->
+  
+      <!-- jquery and bootstap core js files -->
+      <script type="text/javascript" src="plugins/jquery.min.js"></script>
+      <script type="text/javascript" src="plugins/popper.min.js"></script>
+      <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
+      <!-- Modernizr javascript -->
+      <script type="text/javascript" src="plugins/modernizr.js"></script>
+      <!-- jQuery Revolution Slider  -->
+      <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.tools.min.js?rev=5.0"></script>
+      <script type="text/javascript" src="plugins/rs-plugin-5/js/jquery.themepunch.revolution.min.js?rev=5.0"></script>
+      <!-- Isotope javascript -->
+      <script type="text/javascript" src="plugins/isotope/imagesloaded.pkgd.min.js"></script>
+      <script type="text/javascript" src="plugins/isotope/isotope.pkgd.min.js"></script>
+      <!-- Appear javascript -->
+      <script type="text/javascript" src="plugins/waypoints/jquery.waypoints.min.js"></script>
+      <script type="text/javascript" src="plugins/waypoints/sticky.min.js"></script>
+      <!-- Owl carousel javascript -->
+      <script type="text/javascript" src="plugins/owlcarousel2/owl.carousel.min.js"></script>
+      <!-- Pace javascript -->
+      <script type="text/javascript" src="plugins/pace/pace.min.js"></script>
+      <!-- Initialization of Plugins -->
+      <script type="text/javascript" src="js/template.js"></script>
+      <!-- Google Maps javascript -->
+      <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?v=3.exp&amp;key=AIzaSyCU_UNfVTz6FYtyl7FYIV1h1LRUZStUzfk"></script>
+      <script type="text/javascript" src="js/google.map.config.js"></script>
+  
+    </body>
+  </html>
+  
