--- a/template/page-about.html
+++ b/template/page-about.html
@@ -3,6 +3,17 @@
 <html dir="ltr" lang="pt-BR">
 
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-58966194-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+          
+        gtag('config', 'UA-58966194-1');
+    </script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>MVISIA - Máquinas de Visão e Inteligência Artificial</title>
